--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
       -->
     <javac.src.version>1.7</javac.src.version>
     <javac.target.version>1.7</javac.target.version>
+    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
 
     <!-- Can not use default, since group id != Java package name here -->
     <osgi.export>com.fasterxml.jackson.databind.*;version=${project.version}</osgi.export>
@@ -106,6 +107,24 @@
   <build>
      <plugins>
       <!-- Important: enable enforcer plug-in: -->
+       <plugin>
+         <groupId>org.cyclonedx</groupId>
+         <artifactId>cyclonedx-maven-plugin</artifactId>
+         <version>2.8.0</version>
+         <configuration>
+           <schemaVersion>1.5</schemaVersion>
+           <outputName>sbom</outputName>
+           <outputDirectory>target</outputDirectory>
+         </configuration>
+         <executions>
+           <execution>
+             <phase>package</phase>
+             <goals>
+               <goal>makeAggregateBom</goal>
+             </goals>
+           </execution>
+         </executions>
+       </plugin>
       <plugin>
         <artifactId>maven-enforcer-plugin</artifactId>
         <executions> <!-- or?  combine.children="merge"> -->
@@ -116,6 +135,32 @@
           </execution>
         </executions>
       </plugin>
+
+       <plugin>
+         <groupId>org.jacoco</groupId>
+         <artifactId>jacoco-maven-plugin</artifactId>
+         <version>${jacoco-maven-plugin.version}</version>
+         <executions>
+           <execution>
+             <id>prepare-agent</id>
+             <goals>
+               <goal>prepare-agent</goal>
+             </goals>
+           </execution>
+           <execution>
+             <id>report</id>
+             <phase>test</phase>
+             <goals>
+               <goal>report</goal>
+             </goals>
+           </execution>
+         </executions>
+         <configuration>
+           <excludes>
+             <exclude>**com.gargoylesoftware*</exclude>
+           </excludes>
+         </configuration>
+       </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
